--- a/Github/Workflows/Build.yml
+++ b/Github/Workflows/Build.yml
@@ -2,34 +2,56 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        sudo apt update
-        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
+        sudo apt-get update
+        sudo apt-get install -y \
+          zip unzip openjdk-17-jdk \
+          libncurses5 libtinfo5 \
+          build-essential python3-pip
+
+    - name: Install Buildozer and Cython
+      run: |
         pip install --upgrade pip
-        pip install buildozer cython
+        pip install --user buildozer cython
+
+    - name: Accept Android SDK Licenses
+      run: |
+        mkdir -p ~/.buildozer
+        echo "[buildozer]" > ~/.buildozer/global.json
+        echo "android.accept_sdk_license = True" >> ~/.buildozer/global.json
+
+    - name: Set Buildozer API and Build Tools versions
+      run: |
+        sed -i 's/^android.api =.*/android.api = 30/' buildozer.spec || echo "android.api = 30" >> buildozer.spec
+        sed -i 's/^android.build_tools =.*/android.build_tools = 30.0.3/' buildozer.spec || echo "android.build_tools = 30.0.3" >> buildozer.spec
+
+    - name: Initialize Buildozer (if missing)
+      run: |
+        if [ ! -f buildozer.spec ]; then buildozer init; fi
 
     - name: Build APK
       run: |
-        buildozer android debug
+        ~/.local/bin/buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: app-release.apk
+        name: app-debug.apk
         path: bin/*.apk
